--- a/WebContent/box.html
+++ b/WebContent/box.html
@@ -26,7 +26,24 @@ li.withborder{
         border-color: lime;
       }
 }
+<div style="
+    background: #fef;
+    border: 1px solid:#;
+    width: 50px;
+">
+text
+<p>ddd </p>
+
+p {
+border: 2px dashed: #887;
+width: 50%;
+margin: auto;
+text-align: center;
+padding-top: 20px;
+padding-bottom: 20px;
+}
 </style>
+</div>
 <body>
 <ul>
 <li> <li>
@@ -37,6 +54,10 @@ li.withborder{
 
 
 
+<div>
+text
+<p>ddd </p>
+</div>
 
 </body>
 </html>
