--- a/WebContent/box.html
+++ b/WebContent/box.html
@@ -34,6 +34,10 @@ li.withborder{
 text
 <p>ddd </p>
 
+#container {
+	border: 2px dotted #00f;
+	
+}
 p {
 border: 2px dashed: #887;
 width: 50%;
@@ -54,6 +58,26 @@ padding-bottom: 20px;
 
 
 
+<div id ="dontainer"> 
+text
+<p>ddd </p>
+</div>
+<div>
+text
+<p>ddd </p>
+</div>
+<div>
+text
+<p>ddd </p>
+</div>
+<div>
+text
+<p>ddd </p>
+</div>
+<div>
+text
+<p>ddd </p>
+</div>
 <div>
 text
 <p>ddd </p>
